<resources>
    <string name="app_name">BORGER KONG</string>
    <string name="item_image">item photo</string>
    <string name="view_order_btn">View Order</string>
    <string name="lable_quantity">Quantity</string>
    <string name="add_order_btn">Add To Order</string>
    <string name="sample_text">Sample</string>
    <string name="minus_btn">Minus Button</string>
    <string name="add_btn">Add Button</string>
    <string name="close_btn">Close Button</string>
    <string name="food_kilojoules">Kilojoules</string>
    <string name="kj_label">kJ</string>
    <string name="dollar_sign">$</string>
    <string name="cancel_btn">Order More</string>
    <string name="done_btn">Checkout</string>
    <string name="vieworder">Your Order</string>
    <string name="times">x</string>
    <string name="test_quantity">0</string>
    <string name="orderTotal_label">Your Order</string>
    <string name="total">Total: </string>
    <string name="zero">0.00</string>
</resources>
