<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewOrderDetail">

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrice"
        android:onClick="orderMore_btn"
        android:text="@string/cancel_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkoutBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/checkoutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorViewOrderBtn"
        android:onClick="checkoutBtn"
        android:text="@string/done_btn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelBtn" />

    <TextView
        android:id="@+id/orderTotal_Lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/orderTotal_label"
        android:textColor="@color/colorPrice"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ordertotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/zero"
        android:textColor="@color/colorItemName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkoutBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dollar_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/dollar_sign"
        android:textColor="@color/colorItemName"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkoutBtn"
        app:layout_constraintEnd_toStartOf="@+id/ordertotalPrice" />

    <TextView
        android:id="@+id/orderedName"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/sample_text"
        android:textColor="@color/colorItemName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal_Lb" />

    <TextView
        android:id="@+id/itemcost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/zero"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/dlsign"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal_Lb" />

    <TextView
        android:id="@+id/dlsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dollar_sign"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/orderedName"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal_Lb" />

    <TextView
        android:id="@+id/orderQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/test_quantity"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal_Lb" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/times"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/itemcost"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal_Lb" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/total"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkoutBtn"
        app:layout_constraintEnd_toStartOf="@+id/dollar_lb" />

    <TextView
        android:id="@+id/itemTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/zero"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal_Lb" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/dollar_sign"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/orderQuantity"
        app:layout_constraintTop_toBottomOf="@+id/orderTotal_Lb" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderedName" />

</androidx.constraintlayout.widget.ConstraintLayout>