<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuitemDetailAcitivity">

    <ImageView
        android:id="@+id/detailItemPicture"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/item_image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detailItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:hapticFeedbackEnabled="false"
        android:text="@string/sample_text"
        android:textColor="@color/colorItemName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemPicture" />

    <TextView
        android:id="@+id/detailItemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/sample_text"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemPrice" />

    <TextView
        android:id="@+id/detailItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrice"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/dollarText"
        app:layout_constraintTop_toBottomOf="@+id/detailItemName"
        tools:text="@string/sample_text" />

    <TextView
        android:id="@+id/quantityLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lable_quantity"
        android:textColor="@color/colorItemName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemDescription" />

    <ImageButton
        android:id="@+id/minusBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/minus_btn"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintTop_toBottomOf="@+id/quantityLb"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/plusBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/add_btn"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toBottomOf="@+id/quantityLb"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="36dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityLb" />

    <Button
        android:id="@+id/addOrderBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorViewOrderBtn"
        android:fontFamily="sans-serif-black"
        android:onClick="addOrderBtn"
        android:text="@string/add_order_btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dollarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="8dp"
        android:text="@string/dollar_sign"
        android:textColor="@color/colorPrice"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemName" />

    <TextView
        android:id="@+id/detailmenuitemkJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="14dp"
        android:text="@string/sample_text"
        android:textColor="@color/colorPrice"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/detailItemPrice"
        app:layout_constraintTop_toBottomOf="@+id/detailItemName" />

    <TextView
        android:id="@+id/detailkJ_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/kj_label"
        android:textColor="@color/colorPrice"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/detailmenuitemkJ"
        app:layout_constraintTop_toBottomOf="@+id/detailItemName" />

    <TextView
        android:id="@+id/itemTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/zero"
        android:textColor="@color/colorItemName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addOrderBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dl_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dollar_sign"
        android:textColor="@color/colorItemName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addOrderBtn"
        app:layout_constraintEnd_toStartOf="@+id/itemTotal" />

    <TextView
        android:id="@+id/total_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total"
        android:textColor="@color/colorPrice"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addOrderBtn"
        app:layout_constraintEnd_toStartOf="@+id/dl_lb" />


</androidx.constraintlayout.widget.ConstraintLayout>