<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuitem_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/itemPicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/item_image"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/menuItemName"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/sample_text"
        android:textColor="@color/colorItemName"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemPicture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sample_text"
        android:textColor="@color/colorPrice"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/dollar_label"
        app:layout_constraintTop_toBottomOf="@+id/menuItemName" />

    <TextView
        android:id="@+id/kilojoules_lb"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/food_kilojoules"
        android:text="@string/sample_text"
        android:textColor="@color/colorPrice"
        app:layout_constraintStart_toEndOf="@+id/itemPicture"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <TextView
        android:id="@+id/kj_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/kj_label"
        android:textColor="@color/colorPrice"
        app:layout_constraintStart_toEndOf="@+id/kilojoules_lb"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <TextView
        android:id="@+id/dollar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dollar_sign"
        android:textColor="@color/colorPrice"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/kilojoules_lb"
        app:layout_constraintStart_toEndOf="@+id/itemPicture"
        app:layout_constraintTop_toBottomOf="@+id/menuItemName"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilojoules_lb" />
</androidx.constraintlayout.widget.ConstraintLayout>