<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detailItemPicture"
        android:layout_width="140dp"
        android:layout_height="144dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/item_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detailItemName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/sample_text"
        android:textColor="@color/colorItemName"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemPicture" />

    <TextView
        android:id="@+id/detailItemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/sample_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemPrice" />

    <TextView
        android:id="@+id/detailItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/sample_text"
        android:textColor="@color/colorPrice"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemName" />

    <TextView
        android:id="@+id/quantityLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lable_quantity"
        android:textColor="@color/colorItemName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailItemDescription" />

    <ImageButton
        android:id="@+id/minusBtn"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:contentDescription="@string/minus_btn"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityLb"
        tools:srcCompat="@drawable/ic_remove" />

    <ImageButton
        android:id="@+id/plusBtn"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:background="@color/white"
        android:contentDescription="@string/add_btn"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toBottomOf="@+id/quantityLb"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="49dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/plusBtn"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/minusBtn"
        app:layout_constraintTop_toBottomOf="@+id/quantityLb" />

    <ImageButton
        android:id="@+id/closePageBtn"
        android:layout_width="36dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:contentDescription="@string/close_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clear" />

    <Button
        android:id="@+id/addOrderBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorViewOrderBtn"
        android:fontFamily="sans-serif-black"
        android:text="@string/add_order_btn"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>