<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/orderitemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/orderdetailName"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sample_text"
        android:textColor="@color/colorItemName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderdetailPrice"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        android:text="@string/sample_text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/dollarSign"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/dollar_sign"
        android:textColor="@color/colorPrice"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/orderdetailName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timesLb"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/times"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/orderdetailPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderItemquantity"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/test_quantity"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/timesLb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dollaLb"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/dollar_sign"
        android:textColor="@color/colorItemName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/orderItemquantity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderitemTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sample_text"
        android:textColor="@color/colorItemName"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/dollaLb"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderdetailName" />
</androidx.constraintlayout.widget.ConstraintLayout>